# goit-ds-hw-03

./: authors_links.json  pyproject.toml
task1_mongo/: main.py
task2_beauty_soup/: connect.py  main.py  modules.py
